# REINDEER2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  coverage.sh
.cargo/: config.toml
.github/workflows/: tests.yaml
doc/: parameters.md  partitions.md
lints/: Cargo.toml
lints/src/: lib.rs
src/: cli.rs  lib.rs  main.rs  parser.rs  reindeer2.rs
src/reindeer2/: dense_index.rs  filter.rs  index.rs  kmer_counts.rs  merge.rs  minmizer_iter.rs  mod.rs  query.rs  saves.rs  sort_file_of_file.rs
src/reindeer2/merge/: merge_indexes.rs  merge_partitions.rs  mod.rs
src/reindeer2/minimizer_iter/: mod.rs  samplers.rs  sequence_utils.rs
src/reindeer2/query/: approx_abundance.rs  mod.rs
src/reindeer2/save_atomics/: atomics.rs  debug_atomics.rs  mod.rs
src/reindeer2/storage/: filters.rs
src/reindeer2/test_utils/: auto_remove_directory.rs  mod.rs
test_files/: varations_query.fa  variations.fof
tests/: README.md  chunks.rs  common.rs  integration.sh
tests/chunk_data/: file3.fa  file4.fa  fof.txt
tests/integration/: breakpoints.sh
tests/integration/breakpoints/: check_file_contents.sh  expected.csv  run.sh  variations.fof
tests/integration/colored/: expected.fa  run.sh
tests/integration/matrix_average/: files_equal.sh  run.sh
tests/integration/matrix_median/: expected.tsv  run.sh
tests/integration/matrix_raw/: run.sh
tests/integration/matrix_raw_breakpoints/: expected.tsv  run.sh
tests/integration/median/: expected.csv  run.sh
tests/system_testing/: run.sh
tests/system_testing/colored/: run.sh
tests/system_testing/matrix_average/: run.sh
tests/system_testing/matrix_average_sampled/: expected_0.tsv  expected_1.tsv  expected_2.tsv  expected_3.tsv  run.sh
tests/system_testing/matrix_median/: run.sh
tests/system_testing/matrix_median_sampled/: expected_2.tsv  run.sh
tests/system_testing/matrix_raw/: run.sh
tests/system_testing/matrix_raw_breakpoints/: check_files_are_similar.py  run.sh
tests/system_testing/matrix_raw_merged/: run.sh
tests/system_testing/matrix_raw_sampled/: expected_0.tsv  expected_1.tsv  expected_2.tsv  expected_3.tsv  expected_4.tsv  run.sh
tests/system_testing/matrix_raw_sorted/: expected.tsv  run.sh
tests/system_testing/median/: expected.csv  run.sh
tests/system_testing/rename/: check_after.py  check_before.py  expected.tsv  files_equal.py  run.sh
tests/system_testing/rename_bad_new_name/: query.fa  run.sh
tests/system_testing/rename_bad_old_name/: run.sh
tests/unit_tests_data/: duplication.fa  random_seq.fa  random_seq_with_random_bases_at_the_end.fa  random_seq_with_revcomp.fa
(+28 files in other folders)
