[package]
name = "reindeer2"
version = "1.0.0"
edition = "2021"
authors = ["Camille Marchet", "Yohan Hernandez--Courbevoie"]
description = "REINDEER2: k-mer quantification in large collections of samples"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# thiserror = "1.0"
# bitstream-io = "0.9"
# minimizer-iter = { git = "https://github.com/rust-seq/minimizer-iter.git" }
# bit-vec = "0.6"
bio = "0.42.0"
rand = "0.9"
clap = { version = "4.1", features = ["derive"] }
zstd = "0.11"
roaring = "0.10.9"
nthash = "0.5.1"
num-format = "0.4"
csv = "1.1"
rayon = "1.7"
flate2 = "1.0"
bincode = "1.3.3"
thousands = "0.2.0"
libc = "0.2.176"
pelt = { git = "https://github.com/lrobidou/pelt.git", rev = "db7f8f85dac8bbc7da3f41b3c9e97d6befb17d9f" }
log = "0.4"
env_logger = "0.11.8"
tar-get = { git = "https://github.com/lrobidou/tar-get.git", rev = "44391c03624d54f765f4beeb4adbff5f3df34531" }


# [dev-dependencies]
itertools = "0.14.0"
colored = "3.0.0"
thiserror = "2.0.17"

[dev-dependencies]
[dev-dependencies.uuid]
version = "1.19.0"
features = ["v4"]

[profile.dev]
opt-level = 3
split-debuginfo = "unpacked"


[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
overflow-checks = false
