[package]
name = "reindeer2"
version = "1.1.2"
edition = "2021"
authors = ["Camille Marchet", "Yohan Hernandez--Courbevoie"]
license-file = "LICENSE"
description = "REINDEER2: k-mer quantification in large collections of samples"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = "0.42.0"
rand = "0.9"
clap = { version = "4.1", features = ["derive"] }
zstd = "0.11"
roaring = "0.10.9"
num-format = "0.4"
csv = "1.1"
rayon = "1.7"
flate2 = "1.0"
bincode = "1.3.3"
thousands = "0.2.0"
libc = "0.2.176"
pelt-reindeer2 = "0.1.0"
log = "0.4"
env_logger = "0.11.8"
simd-minimizers = "2.3.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }
itertools = "0.14.0"
thiserror = "2.0.17"
tar-get = "0.4.3"

[dev-dependencies]
rstest = "0.26.1"
rstest_reuse = "0.7.0"

[dev-dependencies.uuid]
version = "1.19.0"
features = ["v4"]

[profile.dev]
opt-level = 3
split-debuginfo = "unpacked"


[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
overflow-checks = false

[features]
default = []
nightly = []
scalar = ["simd-minimizers/scalar"]
